--- a/dj-events-backend/package.json
+++ b/dj-events-backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "^0.95.11",
+    "slugify": "^1.6.1",
     "sqlite3": "5.0.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
